# setup-environment-MarcosGiorda97

./: CMakeLists.txt  Doxyfile
include/: greetings.h
src/: greetings.c  main.c
tests/unit/: test_unit_program.c
